--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Practica3"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="" />
+
         <activity
             android:name=".Mapa"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/title_activity_mapa" />
         <activity
             android:name=".Localizacion"
             android:exported="false" />
